apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__abstract_types_in_requires.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 3599
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "entity": {
      "fieldWithDependencies": "success"
    }
  }
}
