apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__aliased_typename_on_fragments.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 2997
expression: aliased_typename
---
{
  "data": {
    "dog": {
      "name": "Spot",
      "nickname": "Spo",
      "barkVolume": 7
    }
  }
}
