apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__deferred_fragment_bounds_nullability-2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 800
expression: stream.next_response().await.unwrap()
---
{
  "hasNext": false,
  "incremental": [
    {
      "data": null,
      "path": [
        "currentUser",
        "activeOrganization",
        "suborga",
        0
      ],
      "extensions": {
        "valueCompletion": [
          {
            "message": "Cannot return null for non-nullable field Organization.nonNullId",
            "path": [
              "currentUser",
              "activeOrganization",
              "suborga",
              0
            ]
          }
        ]
      }
    },
    {
      "data": null,
      "path": [
        "currentUser",
        "activeOrganization",
        "suborga",
        1
      ],
      "extensions": {
        "valueCompletion": [
          {
            "message": "Cannot return null for non-nullable field Organization.nonNullId",
            "path": [
              "currentUser",
              "activeOrganization",
              "suborga",
              1
            ]
          }
        ]
      }
    },
    {
      "data": null,
      "path": [
        "currentUser",
        "activeOrganization",
        "suborga",
        2
      ],
      "extensions": {
        "valueCompletion": [
          {
            "message": "Cannot return null for non-nullable field Organization.nonNullId",
            "path": [
              "currentUser",
              "activeOrganization",
              "suborga",
              2
            ]
          }
        ]
      }
    }
  ]
}
