apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__deferred_fragment_bounds_nullability.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 798
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "currentUser": {
      "activeOrganization": {
        "id": "0",
        "suborga": [
          {
            "id": "1"
          },
          {
            "id": "2"
          },
          {
            "id": "3"
          }
        ]
      }
    }
  },
  "hasNext": true
}
