apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__errors_from_primary_on_deferred_responses-2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 599
expression: stream.next_response().await.unwrap()
---
{
  "hasNext": false,
  "incremental": [
    {
      "data": {
        "errorField": null
      },
      "path": [
        "computer"
      ],
      "errors": [
        {
          "message": "Error field",
          "locations": [
            {
              "line": 1,
              "column": 93
            }
          ],
          "path": [
            "computer",
            "errorField"
          ],
          "extensions": {
            "service": "computers"
          }
        }
      ]
    }
  ]
}
