apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__errors_from_primary_on_deferred_responses.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 597
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "computer": {
      "id": "Computer1"
    }
  },
  "hasNext": true
}
