apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__errors_on_deferred_responses.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 486
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "currentUser": {
      "id": "0"
    }
  },
  "hasNext": true
}
