apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__errors_on_incremental_responses-2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 888
expression: stream.next_response().await.unwrap()
---
{
  "hasNext": false,
  "incremental": [
    {
      "data": {
        "name": null
      },
      "path": [
        "currentUser",
        "activeOrganization",
        "suborga",
        0
      ],
      "errors": [
        {
          "message": "error orga 1",
          "path": [
            "currentUser",
            "activeOrganization",
            "suborga",
            0
          ],
          "extensions": {
            "service": "orga"
          }
        }
      ]
    },
    {
      "data": {
        "name": "A"
      },
      "path": [
        "currentUser",
        "activeOrganization",
        "suborga",
        1
      ]
    },
    {
      "data": {
        "name": null
      },
      "path": [
        "currentUser",
        "activeOrganization",
        "suborga",
        2
      ],
      "errors": [
        {
          "message": "error orga 3",
          "path": [
            "currentUser",
            "activeOrganization",
            "suborga",
            2
          ],
          "extensions": {
            "service": "orga"
          }
        }
      ]
    }
  ]
}
