apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__errors_on_incremental_responses.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 886
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "currentUser": {
      "activeOrganization": {
        "id": "0",
        "suborga": [
          {
            "id": "1"
          },
          {
            "id": "2"
          },
          {
            "id": "3"
          }
        ]
      }
    }
  },
  "hasNext": true
}
