apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__errors_on_nullified_paths.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 2692
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "foo": {
      "id": 1,
      "bar": {
        "id": 2,
        "something": null
      }
    }
  },
  "errors": [
    {
      "message": "Could not fetch bar",
      "path": [
        "foo",
        "bar"
      ],
      "extensions": {
        "code": "NOT_FOUND",
        "service": "S2"
      }
    }
  ]
}
