apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__errors_with_invalid_paths_on_query_with_defer-2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 712
expression: stream.next_response().await.unwrap()
---
{
  "hasNext": false,
  "incremental": [
    {
      "data": {
        "errorField": null
      },
      "path": [
        "computer"
      ],
      "errors": [
        {
          "message": "Error field",
          "path": [
            "computer",
            "errorField"
          ],
          "extensions": {
            "service": "computers"
          }
        }
      ]
    }
  ]
}
